--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,21 @@
     <string name="new_user_register_txt">New User? Register</string>
     <string name="logout">Logout</string>
     <!-- The &#160 is an unicode reference for a non breaking space as xml files trim leading and
-    trailing white spaces-->
+    trailing white spaces (to display the email of the signed in user-->
     <string name="signed_in_as">Signed in as:&#160;</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="monday">Monday</string>
     <string name="tuesday">Tuesday</string>
     <string name="wednesday">Wednesday</string>
     <string name="thursday">Thursday</string>
     <string name="friday">Friday</string>
+    <string name="fundamentals_of_cs">Fundamentals of Computer Science</string>
+    <string name="applications_of_cs">Applications of Computer Science</string>
+    <string name="programming_in_c_c">Programming in C/C++</string>
+    <string name="iwlp_german_1">IWLP German 1</string>
+    <string name="algorithms_and_operating_system">Algorithms and Operating System</string>
+    <string name="compilers">Compilers</string>
+    <string name="programming_in_python">Programming in Python</string>
+    <string name="databases_and_information_security">Databases and Information Security</string>
+    <string name="software_engineering_quality_and_testing">Software Engineering: Quality and Testing</string>
 </resources>
