--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,11 @@
     trailing white spaces (to display the email of the signed in user-->
     <string name="signed_in_as">Signed in as:&#160;</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="monday">Monday</string>
-    <string name="tuesday">Tuesday</string>
-    <string name="wednesday">Wednesday</string>
-    <string name="thursday">Thursday</string>
-    <string name="friday">Friday</string>
+    <string name="monday">Mon</string>
+    <string name="tuesday">Tue</string>
+    <string name="wednesday">Wed</string>
+    <string name="thursday">Thur</string>
+    <string name="friday">Fri</string>
     <string name="fundamentals_of_cs">Fundamentals of Computer Science</string>
     <string name="applications_of_cs">Applications of Computer Science</string>
     <string name="programming_in_c_c">Programming in C/C++</string>
@@ -26,4 +26,7 @@
     <string name="programming_in_python">Programming in Python</string>
     <string name="databases_and_information_security">Databases and Information Security</string>
     <string name="software_engineering_quality_and_testing">Software Engineering: Quality and Testing</string>
+    <string name="sign_up">Sign up</string>
+    <!-- Strings used for fragments for navigation -->
+
 </resources>
